fixato problema scrollbar orizontale

--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@
 .container-jumbo{
     position: absolute;
     bottom: 0;
+    left: 0px;
     margin-bottom: 50px;
 }
 
